--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "6.2.95",
+    "@vuepic/vue-datepicker": "^8.8.1",
     "axios": "^1.7.2",
     "core-js": "^3.34.0",
     "roboto-fontface": "*",
