--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@mdi/font": "6.2.95",
     "@vuepic/vue-datepicker": "^8.8.1",
     "axios": "^1.7.2",
     "core-js": "^3.34.0",
@@ -19,6 +18,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.24.0",
+    "@mdi/font": "^7.4.47",
     "@types/node": "^20.11.25",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-typescript": "^13.0.0",
